# maxwell

./: README.md
maxwell/: CMakeLists.txt  package.xml  torso_controller.xml
maxwell/config/: etherbotix.yaml
maxwell/docs/: assembly.md  bom.md  computer.md
maxwell/docs/lasercut/: 1_4.dxf  1_8.dxf
maxwell/docs/printed/: head_sensor_mount.stl  wrist_mount.stl
maxwell/include/maxwell/: calibrated_interpolation.hpp
maxwell/lasercut/: 1_8.dxf  3_16.dxf  README.md
maxwell/launch/: demo_camera.launch.py  robot.launch.py
maxwell/meshes/: F11.stl  F9.stl  FA-35-TR.stl  arm_mount.stl  arm_mount_28.stl  base.stl  kinect.stl  rx28-side-bracket.stl  sixdof_bracket2.stl  xtion.stl
maxwell/printed/: interrupter_mount.stl  rotary_interrupter.stl  upper_arm_bracket.stl  upper_arm_bracket_long.stl
maxwell/src/: torso_controller.cpp
maxwell/test/: torso_controller_tests.cpp
maxwell/urdf/: arm.urdf.xacro  base.urdf.xacro  gripper.urdf.xacro  head.urdf.xacro  maxwell.urdf.xacro  torso.urdf.xacro
maxwell/urdf/hardware/: ax12.xacro  rx28.xacro  rx64.xacro
maxwell/urdf/sensors/: hokuyo_urg_laser.urdf.xacro  kinect_camera.urdf.xacro  xtion_camera.xacro
maxwell_calibration/: CMakeLists.txt  package.xml
maxwell_calibration/capture_data/: all_pipelines.launch  all_viewers.launch  capture_data.launch  capture_exec.launch  make_samples.py
maxwell_calibration/capture_data/hardware_config/: cam_config.yaml  chain_config.yaml  controller_config.yaml
maxwell_calibration/capture_data/samples/arm/: arm_0000.yaml  arm_0001.yaml  arm_0002.yaml  arm_0003.yaml  arm_0004.yaml  arm_0005.yaml  arm_0006.yaml  arm_0007.yaml  arm_0008.yaml  arm_0009.yaml  arm_0010.yaml  arm_0011.yaml  arm_0012.yaml  arm_0013.yaml  arm_0014.yaml  arm_0015.yaml  arm_0016.yaml  arm_0017.yaml  arm_0018.yaml  arm_0019.yaml  config.yaml
maxwell_calibration/estimate_params/: calibrate_maxwell.sh  estimation_config.launch
maxwell_calibration/estimate_params/config/: free_arms.yaml  free_cameras.yaml  free_cb_locations.yaml  free_torso.yaml  system.yaml
maxwell_calibration/launch/: calibrate.launch  calibration_poses.bag  capture.launch
maxwell_calibration/params/: calibrate.yaml  capture.yaml
maxwell_calibration/test/: maxwell_arm_fk_unittest.py  maxwell_head_fk_unittest.py  test_maxwell_fk.launch
maxwell_calibration/test/data/: arm.txt
maxwell_calibration/view_results/: view_scatter.sh
maxwell_defs/: CMakeLists.txt  package.xml
maxwell_defs/config/: install.bash
maxwell_defs/config/etc/init/: maxwell.conf  ps3joy.conf  roscore.conf
maxwell_defs/config/etc/network/: interfaces
maxwell_defs/config/etc/ros/distro/: maxwell.launch
maxwell_defs/config/etc/udev/rules.d/: 51-laser.rules
maxwell_defs/firmware/: user_hooks.h
maxwell_defs/launch/: base_laser.capability  base_laser.launch  bringup_maxwell.launch  capabilities.launch  demo.launch  fake_maxwell.launch  gripper_controller.launch  head_camera.capability  head_camera.launch  head_laser.capability  head_laser.launch  teleop.launch  upload_calibrated.launch  upload_maxwell.launch
maxwell_defs/meshes/: F1.stl  F6.stl  arm_mx64_forearm.stl  arm_mx64_upper.stl  head_mount.stl  rx28-hinge-bracket.stl  rx28.stl  rx64-hinge-bracket.stl  rx64-hxl.stl  rx64-side-bracket.stl
maxwell_defs/nodes/: laptop_battery.py
maxwell_defs/params/: diagnostics.yaml  maxwell.yaml  maxwell_no_arm.yaml
maxwell_defs/upstart/: bringup.launch  install.bash  maxwell-start  maxwell-stop  maxwell.conf
maxwell_defs/urdf/: arm.urdf.xacro  base.urdf.xacro  gripper.urdf.xacro  head.urdf.xacro  materials.urdf.xacro  maxwell.urdf  maxwell.urdf.xacro  maxwell_no_arm.xacro  parallel_gripper.urdf.xacro  robot_calibrated_2011_12_19_15.xml  torso.urdf.xacro
maxwell_defs/urdf/hardware/: ax12.xacro  rx28.xacro  rx64.xacro
maxwell_defs/urdf/sensors/: hokuyo_urg_laser.urdf.xacro  kinect_camera.urdf.xacro  xtion_camera.xacro
maxwell_interactive_markers/: CMakeLists.txt  package.xml
maxwell_interactive_markers/launch/: arm_markers.launch
maxwell_interactive_markers/src/: arm_marker_server.cpp
maxwell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
maxwell_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  maxwell.srdf  ompl_planning.yaml  sensors_asus.yaml
maxwell_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_fake.launch  demo_live.launch  fake_moveit_controller_manager.launch.xml  maxwell_moveit_controller_manager.launch  maxwell_moveit_controller_manager.launch.xml  maxwell_moveit_sensor_manager.launch  maxwell_moveit_sensor_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  run_benchmark_server_ompl.launch  sensor_manager.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch
maxwell_navigation/: CMakeLists.txt  package.xml
maxwell_navigation/launch/: amcl.launch  build_map.launch  goto.launch  move_base.launch  navigate.launch
maxwell_navigation/launch/includes/: move_base.launch.xml
maxwell_navigation/maps/: botfarm.pgm  botfarm.yaml
maxwell_navigation/nodes/: goto.py  republish.py
maxwell_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
simple_moveit_plugins/: CMakeLists.txt  package.xml  simple_moveit_controller_manager_plugin_description.xml
simple_moveit_plugins/simple_moveit_controller_manager/: CMakeLists.txt
simple_moveit_plugins/simple_moveit_controller_manager/src/: simple_moveit_controller_manager.cpp
