<package format="2">
  <name>maxwell</name>
  <version>0.2.0</version>
  <description>
    Maxwell is a custom mobile manipulator, this package contains his configuration and launch files.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/maxwell</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- definitions -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- custom torso controller -->
  <depend>etherbotix</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>robot_controllers_interface</depend>
  <depend>std_srvs</depend>

  <!-- hardware -->
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>robot_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <!-- teleop -->
  <exec_depend>joy</exec_depend>

  <!-- applications -->
  <exec_depend>maxwell_calibration</exec_depend>
  <exec_depend>maxwell_moveit_config</exec_depend>
  <exec_depend>maxwell_navigation</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
