<package>
  <name>maxwell_calibration</name>
  <version>0.2.0</version>
  <description>
    Launch and configuration files for calibrating Maxwell using the new generic 'calibration' stack.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/maxwell_calibration</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>calibration_launch</run_depend>
  <run_depend>calibration_estimation</run_depend>

  <!-- For running tests -->
  <!--<run_depend>pr2_calibration_launch</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>kdl_parser</run_depend>-->
</package>
