<package>
  <name>maxwell_calibration</name>
  <version>0.2.0</version>
  <description>
    Launch and configuration files for calibrating Maxwell using the 'robot_calibration' package.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/maxwell_calibration</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_calibration</run_depend>
</package>
