<package>
  <name>maxwell_interactive_markers</name>
  <version>0.2.0</version>
  <description>
    This is an adaptation of the turtlebot interactive marker server to the Maxwell robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/maxwell_interactive_markers</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>arbotix_msgs</build_depend>
  <build_depend>simple_arm_server</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>arbotix_msgs</run_depend>
  <run_depend>simple_arm_server</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>arbotix_controllers</run_depend>
</package>
